--- a/renovate.json5
+++ b/renovate.json5
@@ -5,17 +5,17 @@
   ignorePaths: ['package.json'],
   labels: ['dependencies'],
   packageRules: [
-    {
-      packagePatterns: ['*'],
-      enabled: false,
-    },
+    // {
+    //   packagePatterns: ['*'],
+    //   enabled: false,
+    // },
     {
       matchPackageNames: ['@grafana/plugin-e2e'],
     },
     {
       groupName: 'Grafana packages',
       matchPackageNames: ['@grafana/runtime', '@grafana/data', '@grafana/ui'],
-      matchUpdateTypes: ['major', 'minor'],
+      // matchUpdateTypes: ['major', 'minor'],
     },
   ],
   prConcurrentLimit: 10,
