--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
-  "includePaths": ["examples/**"]
+  "includePaths": ["examples/**"],
+  "enabledManagers": ["npm"]
 }
