--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
-  "includePaths": ["examples/app-basic/", "datasource-http/**"],
-  "enabledManagers": ["npm"]
+  "includePaths": ["examples/**"],
+  "excludePaths": ["./package.json"]
 }
